--- a/admin/config.yml
+++ b/admin/config.yml
@@ -20,6 +20,7 @@ collections:
       - { label: "Summary", name: "summary", widget: "text" }
       - { label: "Tags", name: "tags", widget: "list", default: ["post"] }
       - { label: "Body", name: "body", widget: "markdown" }
+      - { label: "Keywords", name: "keywords", widget: "string" }
   # Our pages e.g. About
   - name: "pages"
     label: "Page"
